Added Kubernetes install actions.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -22,7 +22,7 @@ deprecation_warnings = False
 #remote_tmp     = ~/.ansible/tmp
 #local_tmp      = ~/.ansible/tmp
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
-#forks          = 5
+forks          = 8
 #poll_interval  = 15
 #sudo_user      = root
 #ask_sudo_pass = True
@@ -142,7 +142,7 @@ remote_port    = 22
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
-#vault_password_file = /path/to/vault_password_file
+vault_password_file = /etc/ansible/.ansible_vault_pass
 
 # format of string {{ ansible_managed }} available within Jinja2
 # templates indicates to users editing templates files will be replaced.
