--- a/roles/centos_start/handlers/main.yml
+++ b/roles/centos_start/handlers/main.yml
@@ -1,2 +1,16 @@
 ---
-# handlers file for centos7_start
+# handlers file
+#
+
+- name: Restart docker
+  systemd:
+    name:  "{{ item }}"
+    state: restarted
+  loop:
+    - docker
+    - docker.socket
+
+- name: Restart kubelet
+  systemd:
+    name:  kubelet
+    state: restarted
